	  src/widgets/sp-xmlview-attr-list.cpp, src/widgets/sp-xmlview-tree.cpp,
	  src/xml/repr-private.h, src/xml/repr-util.cpp, src/xml/repr.cpp,
	  src/xml/repr.h:
	  SPObjects now ::write() immediately on attribute changes, if those
	  changes are "interactive" (i.e. from the XML editor); this fixes
	  the problem with SPStar's points= attribute updating (bug #910142)

2004-03-14  rejon <jon@protofunk.org>

    * src/toolbox.cpp share/icons/icons.svg: Cleaned the file up to coding 
      standards. I also have begun to add new icons to our program.

2004-03-13  MenTaLguY <mental@rydia.net>

    * src/document.cpp: bumped the update limit on documents a bit
	  (bug #896076)

    * src/sp-text.cpp: SPString now copes with parents that don't have style
	                   information (comment on bug #896706)

    * src/xml/repr.cpp, src/xml/repr-private.h:
	  adding listeners is now O(1), which should make files which make heavy
	  use of <use> more tolerable; I decided to add an extra "last" pointer
	  rather than just prepending to the list (which would have reversed
      its order, and make the common case for removal traverse the entire
	  list -- removal is still O(N) overall, but at least this way we usually
	  hit the best-case) (bug #896076)

2004-03-11  bulia byak <bulia@users.sourceforge.net>

	* src/sp-item.h src/sp-item.cpp: Restore i2root_affine: same as i2doc but
	without c2p, fixes 914039

	* src/selection-chemistry.cpp: Grouping z-order fix

	* src/path-chemistry.cpp: Combine/Break Apart fixes: preserve z-order and
	parent, diagnostics, multiple selected, cleanup, fixes

	* src/libnrtype/nr-type-directory.cpp: Fix win32 memory hog (unfreed
	g_ascii_tolower in ink_strstr), implement caching of looked-up faces

2004-03-10  bulia byak <bulia@users.sourceforge.net>
 
	* src/sp-offset.cpp: Coalesce threshold depends on item size (less transform),
	guarding against invalid item bbox, comments

	* src/sp-text.cpp: TODO comment for effective_dx/dy
