@@ -40,7 +40,6 @@ static void sp_clippath_build (SPObject *object, SPDocument *document, SPRepr *r
 static void sp_clippath_release (SPObject * object);
 static void sp_clippath_set (SPObject *object, unsigned int key, const gchar *value);
 static void sp_clippath_child_added (SPObject *object, SPRepr *child, SPRepr *ref);
-static void sp_clippath_remove_child (SPObject *object, SPRepr *child);
 static void sp_clippath_update (SPObject *object, SPCtx *ctx, guint flags);
 static void sp_clippath_modified (SPObject *object, guint flags);
 static SPRepr *sp_clippath_write (SPObject *object, SPRepr *repr, guint flags);
@@ -85,7 +84,6 @@ sp_clippath_class_init (SPClipPathClass *klass)
 	sp_object_class->release = sp_clippath_release;
 	sp_object_class->set = sp_clippath_set;
 	sp_object_class->child_added = sp_clippath_child_added;
-	sp_object_class->remove_child = sp_clippath_remove_child;
 	sp_object_class->update = sp_clippath_update;
 	sp_object_class->modified = sp_clippath_modified;
 	sp_object_class->write = sp_clippath_write;
@@ -189,17 +187,6 @@ sp_clippath_child_added (SPObject *object, SPRepr *child, SPRepr *ref)
 			}
 		}
 	}
-}
-
-static void
-sp_clippath_remove_child (SPObject *object, SPRepr *child)
-{
-	SPClipPath *cp;
-
-	cp = SP_CLIPPATH (object);
-
-	/* Invoke SPObjectGroup implementation */
-	((SPObjectClass *) (parent_class))->remove_child (object, child);
 }
 
 static void
